[gd_scene load_steps=5 format=3 uid="uid://shma5de1ld47"]

[ext_resource type="Script" path="res://game.gd" id="1_62to7"]
[ext_resource type="PackedScene" uid="uid://dl7wk43mchsge" path="res://overworld.tscn" id="1_gi1oh"]
[ext_resource type="PackedScene" uid="uid://d36hslgoichtt" path="res://main_menu.tscn" id="1_rjh53"]
[ext_resource type="PackedScene" uid="uid://e1jbw6d7qukd" path="res://ui_popup.tscn" id="6_4r6tx"]

[node name="Game" type="Node2D"]
script = ExtResource("1_62to7")

[node name="Overworld" parent="." instance=ExtResource("1_gi1oh")]
unique_name_in_owner = true
visible = false

[node name="MainMenu" parent="." instance=ExtResource("1_rjh53")]
unique_name_in_owner = true
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1921.0
offset_bottom = 1060.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 1

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -574.0
offset_right = 581.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Hello"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
max_lines_visible = 1

[node name="StartButton" type="TextureButton" parent="MainMenu"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="MainMenu/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Start Combat Debug"
horizontal_alignment = 1

[node name="DefeatScreen" parent="." instance=ExtResource("6_4r6tx")]
unique_name_in_owner = true
z_index = 20
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 1
headerText = "You Lose"
bodyText = "You Big Fat Loser"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_debug_start_combat_pressed"]
